# sftpman-iced-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md
assets/bootstrap/: README.md
etc/: sftpman-iced.desktop
locales/: app.yml
src/: application.rs  assets.rs  locale.rs  main.rs  messages.rs  strings.rs  ui_config.rs  utils.rs
src/pages/: about.rs  alert.rs  confirmation.rs  home.rs  mod.rs  record.rs
src/widgets/: button.rs  control_bar.rs  fs_empty_list.rs  fs_list.rs  icon.rs  mod.rs  preflight_check_errors_bar.rs  record.rs  search_bar.rs  text_link.rs
